Add ability to update titles and images on inputs. Update Swagger docs. Bump version to 0.4.0. Fixes #3.
